--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.5.17",
+    "vue-awesome-swiper": "^2.5.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
